<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_row="6"
    android:layout_column="2"
    tools:context=".MainActivity2">


    <Button
        android:id="@+id/button_1"
        android:layout_row="0"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_margin="5sp"
        android:onClick="clickCheese"
        android:text="@string/cheese"
        android:textSize="15sp" />

    <Button
        android:id="@+id/button_2"
        android:layout_row="0"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_margin="5sp"
        android:onClick="clickEgg"
        android:text="@string/egg"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_3"
        android:layout_row="1"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_margin="5sp"
        android:onClick="clickMilk"
        android:text="@string/milk"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_4"
        android:layout_row="1"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_margin="5sp"
        android:onClick="clickSalt"
        android:text="@string/salt"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_5"
        android:layout_row="2"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_margin="5sp"
        android:onClick="clickNoodles"
        android:text="@string/noodles"
        android:textSize="15sp" />

    <Button
        android:id="@+id/button_6"
        android:layout_row="2"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_margin="5sp"
        android:onClick="clickSugar"
        android:text="@string/sugar"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_7"
        android:layout_row="3"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_margin="5sp"
        android:onClick="clickBread"
        android:text="@string/bread"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_8"
        android:layout_row="3"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_margin="5sp"
        android:onClick="clickCorn"
        android:text="@string/corn"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_9"
        android:layout_row="4"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_margin="5sp"
        android:onClick="clickChicken"
        android:text="@string/chicken"
        android:textSize="15sp" />

    <Button
        android:id="@+id/button_10"
        android:layout_row="4"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_margin="5sp"
        android:onClick="clickJuice"
        android:text="@string/juice"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/store_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_gravity="fill"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Search Store Location" />

    <Button
        android:id="@+id/button_search"
        android:layout_row="5"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_margin="5sp"
        android:onClick="clickSearch"
        android:text="@string/search_store"
        android:textSize="20sp" />


</GridLayout>


